added Topics + about_us

--- a/Topics page.html
+++ b/Topics page.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Welcome page for Online Classes">
+    <meta name="description" content="Main search page for Online Classes">
     <meta name= "author" content="Steve">
     <meta name="keywords" content="Online, Classes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page </title>
+    <title>TTopics page  </title>
 </head>
 <body>
     <header>  
-        <!--Welcome header-->
+        <!-- Add home button, courses, perhaps search and contact info. This header should be common on all pages-->
     </header>
 
-    <!-- Some adds for the main body, perhaps a sing in-->
-
+    <!-- 3 lists one for each topic -->
 
     <footer> 
         <!-- link to page "about us", contact info  -->
-
+        
     </footer>
 </body>
 </html>
