--- a/AboutUS.html
+++ b/AboutUS.html
@@ -3,18 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Welcome page for Online Classes">
+    <meta name="description" content="Information about authors">
     <meta name= "author" content="Steve">
     <meta name="keywords" content="Online, Classes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page </title>
+    <title>About Us </title>
 </head>
 <body>
     <header>  
-        <!--Welcome header-->
+        <!--Standar header-->
     </header>
 
-    <!-- Some adds for the main body, perhaps a sing in-->
+    <main>
+        <h1> About us...</h1>
+        
+        <article id="Steve bio">
+            <h2> Steve Meidanis </h2>
+            <img src="">
+            <section id= "Steve bio paragraph ">
+            <h3> Bio</h3>
+                <p>Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. You can
+                check some of my work at my github profile <a href="https://github.com/StephenDanys">here</a>. 
+                </p>
+            </section>
+       </article>
+
+       <article id="">
+            <h2> s </h2>
+            <img src="">
+            <section id= " ">
+            <h3> Bio</h3>
+                <p> 
+                </p>
+            </section>
+        </article>
+
+
+    </main>
+    
 
 
     <footer> 
