--- a/Topics page.html
+++ b/Topics page.html
@@ -7,7 +7,7 @@
     <meta name= "author" content="Steve">
     <meta name="keywords" content="Online, Classes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TTopics page  </title>
+    <title>Topics page</title>
 </head>
 <body>
     <header>  
