added search blocks

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -22,8 +22,9 @@
             <img src="">
             <section id= "Steve bio paragraph ">
             <h3> Bio</h3>
-                <p>Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. You can
-                check some of my work at my github profile <a href="https://github.com/StephenDanys">here</a>. 
+                <p>Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. I am interested
+                in web Development, and profficient in language like C# and C++. You can check some of my work at my github profile
+                 <a href="https://github.com/StephenDanys">here</a>. 
                 </p>
             </section>
        </article>
