added project structure

--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Main search page for Online Classes">
-    <meta name= "author" content="Steve">
-    <meta name="keywords" content="Online, Classes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topics page</title>
+    <meta name="description" content="Free online classes for numerus Computer Science fields.">
+    <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
+    <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
+    <title>SkillDev | Topics</title>
 </head>
 <body>
     <header>  
