--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Welcome page for SkillDev:Online Classes">
-    <meta name= "author" content="Steve">
-    <meta name="keywords" content="Online, Classes, SkillDev">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page </title>
+    <meta name="description" content="Free online classes for numerus Computer Science fields.">
+    <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
+    <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
+    <title>SkillDev | Welcome Page</title>
 </head>
 <body>
     <header>  
         <!--Welcome header-->
-        <h1>Welcome to SkillDev!!! </h1>
+        <h1>Welcome to SkillDev!!!</h1>
         <div class="NavBar">
             <nav id="welcomeNav">
                 <ul>
