small changes in bio structure

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -10,41 +10,73 @@
     <title>SkillDev | About Us</title>
 </head>
 <body>
-    <header>  
-        <!--Standar header-->
+   <!-- Header bar -->
+   <header class="container">  
+        <!-- Navigation bar -->
+        <nav id="navbar">
+            <!-- Webpage icon -->
+            <div id="page-icon">
+                <img src="" alt="webpage icon">
+            </div>
+            <!-- Webpage name -->
+            <div id="page-name">
+                <h1>SkillDev</h1>
+            </div>
+            <!-- Webpage menu -->
+            <div id="page-menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="topics.html">Topics</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
-    <main>
-        <h1> About us...</h1>
+    <main class="container">
+        <section id="about">
+            <div class="section-title">
+                <h2>Ge to know us!</h2>
+            </div>
+            <div class="section-info">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Quidem non odit possimus sequi. 
+                    Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
+                </p>
+            </div>
+        </section>
         
-        <article id="Steve bio">
-            <h2> Steve Meidanis </h2>
-            <img src="">
-            <section id= "Steve bio paragraph ">
-            <h3> Bio</h3>
-                <p>Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. I am interested
-                in web Development, and profficient in language like C# and C++. You can check some of my work at my github profile
-                 <a href="https://github.com/StephenDanys">here</a>. 
+        <!-- Stefanos bio -->
+        <article class="bio">
+            <section class="bio-header">
+                <img src="" alt="stefanos avatar">
+                <h2>Steve Meidanis</h2>
+            </section>
+            <section class="bio-info">
+                <p>
+                    Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. I am interested
+                    in web Development, and profficient in language like C# and C++. You can check some of my work at my github profile
+                    <a href="https://github.com/StephenDanys">here</a>. 
                 </p>
             </section>
        </article>
 
-       <article id="">
-            <h2> s </h2>
-            <img src="">
-            <section id= " ">
-            <h3> Bio</h3>
+       <!-- Lampros bio -->
+       <article class="bio">
+            <section class="bio-header">
+                <img src="" alt="lampros avatar">
+                <h2>Lampros Lountzis</h2>
+            </section>
+            <section class="bio-info">
                 <p> 
                 </p>
             </section>
         </article>
-
-
     </main>
     
-
-
-    <footer> 
+    <!-- Footer bar -->
+    <footer class="container"> 
         <!-- link to page "about us", contact info  -->
 
     </footer>
