--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -10,15 +10,38 @@
     <title>SkillDev | Topics</title>
 </head>
 <body>
-    <header>  
-        <!-- Add home button, courses, perhaps search and contact info. This header should be common on all pages-->
+    <!-- Header bar -->
+    <header class="container">  
+        <!-- Navigation bar -->
+        <nav id="navbar">
+            <!-- Webpage icon -->
+            <div id="page-icon">
+                <img src="" alt="webpage icon">
+            </div>
+            <!-- Webpage name -->
+            <div id="page-name">
+                <h1>SkillDev</h1>
+            </div>
+            <!-- Webpage menu -->
+            <div id="page-menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Topics</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <!-- 3 lists one for each topic -->
-
-    <footer> 
-        <!-- link to page "about us", contact info  -->
+    <main class="container">
         
+    </main>
+
+     <!-- Footer bar -->
+    <footer class="container"> 
+        <!-- link to page "about us", contact info  -->
+
     </footer>
 </body>
 </html>
