--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -156,8 +156,15 @@
     
     <!-- Footer bar -->
     <footer class="container"> 
-        <!-- link to page "about us", contact info  -->
-
+        <div class="social">
+            <ul>
+                <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
+                <li><b>Email:</b> <a href="mailto:lamproslntz15@gmail.com">lamproslntz15@gmail.com</a>, <a href="mailto:"></a></li>
+                <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
+                <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
+            </ul>
+        </div>
+        <p class="copyright">AUEB © 2021</p>
     </footer>
 </body>
 </html>
