added link to contact page:

--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free online classes for numerus Computer Science fields.">
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
-    <title>SkillDev | Welcome Page</title>
+    <title>Welcome | SkillDev</title>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
                     <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
