--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free online classes for numerus Computer Science fields.">
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
-    <title>SkillDev | Topics</title>
+    <title>Topics | SkillDev</title>
 </head>
 <body>
     <!-- Header bar -->
@@ -28,6 +28,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Topics</a></li>
                     <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
