added lampros avatar

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -99,7 +99,7 @@
        <!-- Lampros bio -->
        <article class="bio">
             <header class="bio-header">
-                <img src="" alt="lampros avatar">
+                <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
                 <h2>Lampros Lountzis</h2>
             </header>
             <section class="bio-info">
@@ -165,7 +165,6 @@
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
             </ul>
         </div>
-        <p class="copyright">AUEB © 2021</p>
     </footer>
 </body>
 </html>
