key principles, finished home page

--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -35,17 +35,64 @@
         </nav>
     </header>
 
-    <!-- Some adds for the main body, perhaps a sing in-->
     <main class="container">
+        <!-- Promotion banner -->
+        <section class="banner">
+            <div class="banner-left">
+                <h2>Take the next step toward your goals with SkillDev.</h2>
+                <p>Join now to receive personalized recommendations from the full SkillDev catalog.</p>
+                <button class="signup" type="button">Join for Free</button>
+            </div>
+            <div class="banner-right">
+                <img src="img/banner-welcome.jpg" alt="welcome banner image">
+            </div>
+        </section>
+
         <!-- Search bar -->
          <section id="search">
             <div class="section-title">
                 <h2> What do you want to learn ?</h2>
             </div>
-            <form action="/search"  method="post">
+            <form action="#"  method="post">
                 <input class="search-box" type="text" name="query" placeholder="Search...">
                 <button class="search-btn" type="submit" >Search</button>
             </form>
+        </section>
+        
+        <!-- Information -->
+        <section class="banner">
+            <!-- Principles -->
+            <div class="banner-left">
+                <h2>Becoming better</h2>
+                <p>
+                    With more than two dozen distinct learning features to help you achieve your goals, 
+                    our approach follows four key principles:
+                </p>
+                <h3>Learn</h3>
+                <p>
+                    Learn new knowledge and skills in a variety of ways, from engaging video lectures and hand-out meaterial to 
+                    interactive elements and weekly seminars. 
+                </p>
+                <h3>Practice</h3>
+                <p>
+                    Demonstrating your knowledge is a critical part of learning. 
+                    SkillDev courses provide a space to practice with quick daily challenges and virtual labs.
+                    All of course on cloud premises.
+                </p>
+                <h3>Assess</h3>
+                <p>
+                    Test your skills by solving real-world problems through projects. Whats more?
+                    You can track your progress in our self-tailored dashboards!
+                </p>
+                <h3>Apply</h3>
+                <p>
+                    Transform how you think and what you can do. Translate your skills into real-world tools
+                    and apply your capabilities in the context of your job. Our certifates can make you a challenging candidate!
+                </p>
+            </div>
+            <div class="banner-right">
+                <img src="img/banner-rubics-cube.png" alt="rubics cube">
+            </div>
         </section>
     </main>
 
@@ -59,7 +106,6 @@
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
             </ul>
         </div>
-        <p class="copyright">AUEB © 2021</p>
     </footer>
 </body>
 </html>
