Added Contact form, completed about page

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -38,7 +38,7 @@
     <main class="container">
         <section id="about">
             <div class="section-title">
-                <h2>Ge to know us!</h2>
+                <h2>Get to know us!</h2>
             </div>
             <div class="section-info">
                 <p>
@@ -59,38 +59,47 @@
                 <div class="bio-summary">
                     <p> 
                         Hello, I am Steve. I am a C.S. student at Athens University of Economics and Buisness. I am interested
-                        in web Development, and profficient in language like C# and C++.
+                        in web Development, especially in apps and APIs. I like working on coding projects , and videogames. Right now
+                        I'm working on my JS skills, and learning to built an API
                     </p>
                 </div>
                 <div class="bio-comp">
                     <h3>Work Experience</h3>
                     <ul>
-                        <li></li>
+                        <li>Small Projects</li>
                     </ul>
                 </div>
                 <div class="bio-comp">
                     <h3>Education</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
+                        <li>AUEB, Department of Informatics</li>
+                        <li>Music School of Argolis</li>
                     </ul>
                 </div>
                 <div class="bio-comp">
                     <h3>Top skills</h3>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                    <ol>
+                        <li> Back End Coding</li>
+                        <li>Web Design</li>
+                    </ol>
                 </div>
                 <div class="bio-comp">
                     <h3>Skills</h3>
-                    <ul></ul>
+                    <ul>
+                        <li> Python(Pandas, Numpy, Matplotlib) </li>
+                        <li>Github: <a href="">Steve Meidanis</a> </li>
+                        <li> Java(Net, Threads)</li>
+                        <li>Android Development</li>
+                        <li>Microsoft Office</li>
+                    </ul>
                 </div>
                 <div class="bio-comp">
                     <h3>Interpersonal Skills</h3>
                     <ul>
-    
+                        <li>Teamwork</li>
+                        <li>Problem Solving</li>
+                        <li>Self Learning</li>
+
                     </ul>
                 </div>
             </section>
@@ -124,7 +133,7 @@
                     </ul>
                 </div>
                 <div class="bio-comp">
-                    <h3>Top skills</h3>
+                    <h3>Top skills</h3> <!-- make this ol-->
                     <ul>
                         <li>Machine Learning</li>
                         <li>Deep Learning</li>
@@ -146,6 +155,7 @@
                 <div class="bio-comp">
                     <h3>Interpersonal Skills</h3>
                     <ul>
+                        <li>Project Managing</li>
                         <li>Teamwork</li>
                         <li>Problem Solving</li>
                         <li>Self Learning</li>
