--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <!-- Search bar -->
+        <!-- Search bar --> <!-- i will use some different tags like field and label-->
          <section id="search">
             <div class="section-title">
                 <h2> What do you want to learn ?</h2>
