--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -36,7 +36,7 @@
 
     <!-- 3 lists one for each topic -->
     <main class="container">
-        
+        <!-- aside-->
     </main>
 
      <!-- Footer bar -->
