modified/checked everything

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -40,17 +40,22 @@
             <div class="section-title">
                 <h2>Get to know us!</h2>
             </div>
-            <div class="section-info">
+            <div class="section-info"> <!-- fix this-->
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Quidem non odit possimus sequi. 
                     Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
                 </p>
             </div>
+
+            <div class="navbuttons">
+                <a href="#Stevebio">Steve</a>
+                <a href="#Lamprosbio">Lampros</a>
+            </div>
         </section>
         
         <!-- Stefanos bio -->
-        <article class="bio">
+        <article id ="Stevebio" class="bio">
             <header class="bio-header">
                 <img src="" alt="stefanos avatar">
                 <h2>Steve Meidanis</h2>
@@ -66,6 +71,7 @@
                 <div class="bio-comp">
                     <h3>Work Experience</h3>
                     <ul>
+                        <li>Wedding Service</li>
                         <li>Small Projects</li>
                     </ul>
                 </div>
@@ -87,15 +93,16 @@
                     <h3>Skills</h3>
                     <ul>
                         <li> Python(Pandas, Numpy, Matplotlib) </li>
-                        <li>Github: <a href="">Steve Meidanis</a> </li>
                         <li> Java(Net, Threads)</li>
                         <li>Android Development</li>
+                        <li>Github</li>
                         <li>Microsoft Office</li>
                     </ul>
                 </div>
                 <div class="bio-comp">
                     <h3>Interpersonal Skills</h3>
                     <ul>
+                        <li>Project Managing</li>
                         <li>Teamwork</li>
                         <li>Problem Solving</li>
                         <li>Self Learning</li>
@@ -106,7 +113,7 @@
        </article>
 
        <!-- Lampros bio -->
-       <article class="bio">
+       <article id="Lamprosbio" class="bio">
             <header class="bio-header">
                 <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
                 <h2>Lampros Lountzis</h2>
@@ -133,12 +140,12 @@
                     </ul>
                 </div>
                 <div class="bio-comp">
-                    <h3>Top skills</h3> <!-- make this ol-->
-                    <ul>
+                    <h3>Top skills</h3> 
+                    <ol>
                         <li>Machine Learning</li>
                         <li>Deep Learning</li>
                         <li>Presentation Skills</li>
-                    </ul>
+                    </ol>
                 </div>
                 <div class="bio-comp">
                     <h3>Skills</h3>
@@ -170,7 +177,7 @@
         <div class="social">
             <ul>
                 <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
-                <li><b>Email:</b> <a href="mailto:lamproslntz15@gmail.com">lamproslntz15@gmail.com</a>, <a href="mailto:"></a></li>
+                <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
             </ul>
