--- a/Exercise1/contact.html
+++ b/Exercise1/contact.html
@@ -69,16 +69,25 @@
                 <legend>Feedback</legend>
 
                 <fieldset>
-                    <legend>Was there something wrong?</legend>
-                    <input type="radio" id="GoodReview" name="reviewType" value="no">
-                    <label for="GoodReview">No</label>
+                    <legend>Rate Us!</legend>
+                    <input type="radio" id="onestar" name="rating" value="1">
+                    <label for="onestar">&#9733;</label>
 
-                    <input type="radio" id="BadReview" name="reviewType" value="yes">
-                    <label for="BadReview">Yes</label>
+                    <input type="radio" id="twostars" name="rating" value="2">
+                    <label for="twostars">&#9733;&#9733;</label>
+
+                    <input type="radio" id="threestars" name="rating" value="3">
+                    <label for="threestars">&#9733;&#9733;&#9733;</label>
+
+                    <input type="radio" id="fourstars" name="rating" value="4">
+                    <label for="fourstars">&#9733;&#9733;&#9733;&#9733;</label>
+
+                    <input type="radio" id="fivestars" name="rating" value="5">
+                    <label for="onestar">&#9733;&#9733;&#9733;&#9733;&#9733;</label>
                 </fieldset>
 
                 <label for="Review_txt">Review</label>
-                <textarea id="Review_txt" name="Review" placeholder="Write something.." ></textarea>
+                <textarea id="Review_txt" name="Review" placeholder="Write something..." ></textarea>
             </fieldset>
 
             <input type="submit" value="Submit">
@@ -92,7 +101,7 @@
         <div class="social">
             <ul>
                 <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
-                <li><b>Email:</b> <a href="mailto:lamproslntz15@gmail.com">lamproslntz15@gmail.com</a>, <a href="mailto:"></a></li>
+                <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
             </ul>
