--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <li><a href="Exercise4/index.html"></a>Responsive Design</a></li>
         <li><a href="Exercise5/index.html"></a>HTML Forms and validation</a></li>
     </ul>
+
+
+    <h2>Sources</h2>
+    <ul>
+        <li>coursera.org</li>
+        <li>pexels.com</li>
+        <li>edx.org</li>
+    </ul>
 </body>
 </html>
