--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -101,7 +101,7 @@
         <div class="social">
             <ul>
                 <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
-                <li><b>Email:</b> <a href="mailto:lamproslntz15@gmail.com">lamproslntz15@gmail.com</a>, <a href="mailto:"></a></li>
+                <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
             </ul>
