--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -13,17 +13,17 @@
    <!-- Header bar -->
    <header class="container">  
         <!-- Navigation bar -->
-        <nav id="navbar">
+        <nav class="navbar">
             <!-- Webpage icon -->
-            <div id="page-icon">
+            <div class="page-icon">
                 <img src="" alt="webpage icon">
             </div>
             <!-- Webpage name -->
-            <div id="page-name">
+            <div class="page-name">
                 <h1>SkillDev</h1>
             </div>
             <!-- Webpage menu -->
-            <div id="page-menu">
+            <div class="page-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
@@ -36,7 +36,7 @@
     
     <!-- Biography -->
     <main class="container">
-        <section id="about">
+        <section class="about">
             <div class="section-title">
                 <h2>Get to know us!</h2>
             </div>
@@ -78,8 +78,8 @@
                 <div class="bio-comp">
                     <h3>Education</h3>
                     <ul>
-                        <li>AUEB, Department of Informatics</li>
-                        <li>Music School of Argolis</li>
+                        <li><b>Athens University of Economics and Business</b> - B.Sc. in Informatics</li>
+                        <li><b>Music School of Argolis</b></li>
                     </ul>
                 </div>
                 <div class="bio-comp">
@@ -92,8 +92,8 @@
                 <div class="bio-comp">
                     <h3>Skills</h3>
                     <ul>
-                        <li> Python(Pandas, Numpy, Matplotlib) </li>
-                        <li> Java(Net, Threads)</li>
+                        <li>Python (Pandas, Numpy, Matplotlib) </li>
+                        <li>Java (Net, Threads)</li>
                         <li>Android Development</li>
                         <li>Github</li>
                         <li>Microsoft Office</li>
@@ -102,7 +102,7 @@
                 <div class="bio-comp">
                     <h3>Interpersonal Skills</h3>
                     <ul>
-                        <li>Project Managing</li>
+                        <li>Project Managment</li>
                         <li>Teamwork</li>
                         <li>Problem Solving</li>
                         <li>Self Learning</li>
@@ -162,7 +162,6 @@
                 <div class="bio-comp">
                     <h3>Interpersonal Skills</h3>
                     <ul>
-                        <li>Project Managing</li>
                         <li>Teamwork</li>
                         <li>Problem Solving</li>
                         <li>Self Learning</li>
@@ -176,7 +175,7 @@
     <footer class="container"> 
         <div class="social">
             <ul>
-                <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
+                <li><b>Mobile:</b> <a href="tel:123-456-7890">123-456-7890</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
                 <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
