--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -10,30 +10,29 @@
     <title>Welcome | SkillDev</title>
 </head>
 <body>
-
-    <!-- Header bar -->
-    <header class="container">  
+   <!-- Header bar -->
+   <header class="container">  
         <!-- Navigation bar -->
-        <nav id="navbar">
+        <nav class="navbar">
             <!-- Webpage icon -->
-            <div id="page-icon">
+            <div class="page-icon">
                 <img src="" alt="webpage icon">
             </div>
             <!-- Webpage name -->
-            <div id="page-name">
+            <div class="page-name">
                 <h1>SkillDev</h1>
             </div>
             <!-- Webpage menu -->
-            <div id="page-menu">
+            <div class="page-menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="#">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
-    </header>
+    </header> 
 
     <main class="container">
         <!-- Promotion banner -->
@@ -49,7 +48,7 @@
         </section>
 
         <!-- Search bar --> <!-- i will use some different tags like field and label-->
-         <section id="search">
+         <section class="search">
             <div class="section-title">
                 <h2> What do you want to learn ?</h2>
             </div>
@@ -100,7 +99,7 @@
     <footer class="container"> 
         <div class="social">
             <ul>
-                <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
+                <li><b>Mobile:</b> <a href="tel:123-456-7890">123-456-7890</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
                 <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
