--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -10,40 +10,101 @@
     <title>Topics | SkillDev</title>
 </head>
 <body>
-    <!-- Header bar -->
-    <header class="container">  
+   <!-- Header bar -->
+   <header class="container">  
         <!-- Navigation bar -->
-        <nav id="navbar">
+        <nav class="navbar">
             <!-- Webpage icon -->
-            <div id="page-icon">
+            <div class="page-icon">
                 <img src="" alt="webpage icon">
             </div>
             <!-- Webpage name -->
-            <div id="page-name">
+            <div class="page-name">
                 <h1>SkillDev</h1>
             </div>
             <!-- Webpage menu -->
-            <div id="page-menu">
+            <div class="page-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Topics</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="topics.html">Topics</a></li>
+                    <li><a href="#">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
-    </header>
+    </header>   
 
-    <!-- 3 lists one for each topic -->
     <main class="container">
-        <!-- aside-->
+        <!-- Page banner -->
+        <section class="about">
+            <div class="section-title">
+                <h2>Explore Topics</h2>
+            </div>
+            <div class="section-info">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Quidem non odit possimus sequi. 
+                    Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
+                </p>
+            </div>
+        </section>
+
+        <!-- Topic -- Data Science -->
+        <section class="banner">
+            <div class="banner-left">
+                <h2>Data Science</h2>
+                <ul>
+                    <li>Data Analysis</li>
+                    <li><a href="machine-learning.html">Machine Learning</a></li>
+                    <li>Probability and Statistics</li>
+                </ul>
+            </div>
+            <div class="banner-right">
+                <img src="img/banner-data-science.jpg" alt="data science banner">
+            </div>
+        </section>
+
+        <!-- Topic -- Application Development -->
+
+        <!-- Topic -- Health Science -->
+        <section class="banner">
+            <div class="banner-left">
+                <h2>Health Science</h2>
+                <ul>
+                    <li>Health Informatics</li>
+                    <li>Psychology</li>
+                    <li>Nutrition</li>
+                    <li>Animal Health</li>
+                </ul>
+            </div>
+            <div class="banner-right">
+                <img src="img/banner-health-science.png" alt="health science banner">
+            </div>
+        </section>
+
+        <!-- Topic -- Business Science -->
+
+        <!-- Topic -- Arts and Humanities -->
+        <section class="banner">
+            <div class="banner-left">
+                <h2>Arts and Humanities</h2>
+                <ul>
+                    <li>History</li>
+                    <li>Music and Art</li>
+                    <li>Philosophy</li>
+                </ul>
+            </div>
+            <div class="banner-right">
+                <img src="img/banner-arts-humanities.jpg" alt="arts and humanities banner">
+            </div>
+        </section>
     </main>
 
-     <!-- Footer bar -->
+    <!-- Footer bar -->
     <footer class="container"> 
         <div class="social">
             <ul>
-                <li><b>Mobile:</b> <a href="tel:6945261838">6945261838</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
+                <li><b>Mobile:</b> <a href="tel:123-456-7890">123-456-7890</a>, <a href="tel:123-456-7890">123-456-7890</a></li>
                 <li><b>Email:</b> <a href="mailto:p3170095@aueb.gr">p3170095@aueb.gr</a>, <a href="mailto:p31701017@aueb.gr">p31701017@aueb.gr</a></li>
                 <li><b>Github:</b> <a href="https://github.com/StephenDanys">lamproslntz</a>, <a href="https://github.com/lamproslntz">StephenDanys</a></li>
                 <li><b>Instagram:</b> <a href="https://www.instagram.com/lampros_lntz/">lampros_lntz</a>, <a href="https://www.instagram.com/stephendanys/">stephendanys</a></li>
