--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
     <h1>Τεχνολογίες και Προγραμματισμός Εφαρμογών στον Ιστο</h1>
     <ul>
         <li><a href="Exercise1/index.html">Δομή και περιεχόμενο ιστότοπου</a></li>
-        <li><a href="Exercise2/index.html"></a>Μορφοποίηση περιεχομένου</a></li>
-        <li><a href="Exercise3/index.html"></a>Διάταξη ιστοτόπου</a></li>
-        <li><a href="Exercise4/index.html"></a>Responsive Design</a></li>
-        <li><a href="Exercise5/index.html"></a>HTML Forms and validation</a></li>
+        <li><a href="Exercise2/index.html">Μορφοποίηση περιεχομένου</a></li>
+        <li><a href="Exercise3/index.html">Διάταξη ιστοτόπου</a></li>
+        <li><a href="Exercise4/index.html">Responsive Design</a></li>
+        <li><a href="Exercise5/index.html">HTML Forms and validation</a></li>
     </ul>
 
-
-    <h2>Sources</h2>
+    <h1>Ομάδα</h1>
     <ul>
-        <li>coursera.org</li>
-        <li>pexels.com</li>
-        <li>edx.org</li>
+        <li>Στέφανος Μεϊδάνης (3170107)</li>
+        <li>Λάμπρος Λούντζης (3170095)</li>
+    </ul>
+
+    <h1>Πηγές</h1>
+    <ul>
+        <li><a href="https://www.coursera.org/">Coursera</a></li>
+        <li><a href="https://www.edx.org/">edX</a></li>
+        <li><a href="https://www.pexels.com/">Pexels</a></li>
+        <li><a href="https://unsplash.com/">Unsplash</a></li>
     </ul>
 </body>
 </html>
