--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)</title>
+    <title>Technologies and Programming of Web</title>
 </head>
 <body>
     <h1>Τεχνολογίες και Προγραμματισμός Εφαρμογών στον Ιστο</h1>
