Ds courses added, topics completed, images added

--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -25,9 +25,9 @@
             <!-- Webpage menu -->
             <div class="page-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
@@ -58,7 +58,7 @@
             </form>
         </section>
         
-        <!-- Information -->
+        <!-- Information --> <!-- ayto na ginei me dl lista-->
         <section class="banner">
             <!-- Principles -->
             <div class="banner-left">
