--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -26,8 +26,8 @@
             <div class="page-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="topics.html">Topics</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Topics</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
@@ -65,6 +65,19 @@
         </section>
 
         <!-- Topic -- Application Development -->
+        <section class="banner">
+            <div class="banner-right">
+                <h2>Application Development</h2>
+                <ul>
+                    <li>Android Applications </li>
+                    <li><a href="website-creation.html">Website Creation</a></li>
+                    <li><a href="distributed-sustems.html">Distributed Systems</a></li>
+                </ul>
+            </div>
+            <div class="banner-left">
+                <img src="img/Website-banner.jpg" alt="website banner">
+            </div>
+        </section>
 
         <!-- Topic -- Health Science -->
         <section class="banner">
@@ -83,6 +96,19 @@
         </section>
 
         <!-- Topic -- Business Science -->
+        <section class="banner">
+            <div class="banner-right">
+                <h2>Business Science</h2>
+                <ul>
+                    <li>Human Resources </li>
+                    <li>Brand Awareness</a></li>
+                    <li>Risk Management</a></li>
+                </ul>
+            </div>
+            <div class="banner-left">
+                <img src="img/business-banner.jpg" alt="business banner">
+            </div>
+        </section>
 
         <!-- Topic -- Arts and Humanities -->
         <section class="banner">
