--- a/Exercise1/contact.html
+++ b/Exercise1/contact.html
@@ -27,8 +27,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
